BusOne/src/objects/Event_Attendee_vod__c.object
<CustomObject>
    <description>This is a child object of Medical Event. One row represents a entity (Account, Contact, User) who has been invited to attended to the Medical Event. The Attendee_vod field is updated by a trigger to insure it always matches the name field of the account, contact, or user on create/update.</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account acting as an Attendee.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Event Attendees(Account)</relationshipLabel>
        <relationshipName>Event_Attendee_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Line_1_vod__c</fullName>
        <description>Used to store the attendee&apos;s street address.</description>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_vod__c</fullName>
        <description>Used to store the attendee&apos;s street address.</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Name_vod__c</fullName>
        <description>This field is a formula that displays the Attendee Name from the Attendee field and acts as a Link to the Event Attendee record.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp;  Id,  IF(LEN(Attendee_vod__c) &lt; 1,&quot;Attendee Link&quot;,Attendee_vod__c)  ,&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Type_vod__c</fullName>
        <description>This field defines what type of Attendee has been selected for the Event.  This formula can be modified to meet the naming conventions of a Customer&apos;s organization.</description>
        <formula>IF(LEN( Account_vod__c) &gt; 0, &quot;Account&quot;,  IF(LEN( Contact_vod__c) &gt; 0, &quot;Contact&quot;,  &quot;User&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_vod__c</fullName>
        <description>The text of the Person that is selected either in the Account, Contact, or User Lookup.  This is populated by a Trigger on Save.</description>
        <label>Attendee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_vod__c</fullName>
        <description>Used to store the attendee&apos;s city.</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobrowse_MC_Activity_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the reference to the CoBrowse Multichannel Activity header record</description>
        <label>CoBrowse Activity</label>
        <referenceTo>Multichannel_Activity_vod__c</referenceTo>
        <relationshipLabel>Event Attendees</relationshipLabel>
        <relationshipName>Event_Attendees_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cobrowse_URL_Participant_vod__c</fullName>
        <description>Stores the CoBrowse URL for the participant</description>
        <label>Attendee URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact attending the event.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Attendees(Contact)</relationshipLabel>
        <relationshipName>Event_Attendee_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EM_Attendee_Type_vod__c</fullName>
        <description>Stub of the EM Attendee Type</description>
        <formula>EM_Attendee_vod__r.Attendee_Type_vod__c</formula>
        <label>EM Attendee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_Attendee_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used by the system. It must be visible to users of Veeva Event Management.</description>
        <label>Attendee</label>
        <referenceTo>EM_Attendee_vod__c</referenceTo>
        <relationshipLabel>Event Attendees</relationshipLabel>
        <relationshipName>Event_Attendees_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EM_Event_Speaker_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used by the system. It must be visible to users of Veeva Event Management.</description>
        <label>Event Speaker</label>
        <referenceTo>EM_Event_Speaker_vod__c</referenceTo>
        <relationshipLabel>Event Attendees(Event Speaker)</relationshipLabel>
        <relationshipName>Event_Attendees_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_vod__c</fullName>
        <description>Used to store the attendee&apos;s email address.</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>ID of object associated with the attendee such as an account.</description>
        <label>Entity Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Attendee_Type_vod__c</fullName>
        <description>Indicates the type of attendee. The values of this picklist should match the values available in the third-party expense system, such as Concur.</description>
        <label>Expense Attendee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BUSGUEST</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_Post_Status_vod__c</fullName>
        <description>Holds a Success or Fail status based on the attempt to post this attendee into Concur. If the attendee was not yet posted, the status will be null.</description>
        <label>Expense Post Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_vod__c</fullName>
        <description>Used to store the attendee&apos;s first name</description>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Attendees with the Incurred Expense checkbox checked will be posted as Attendees to Concur.</description>
        <label>Incurred Expense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name_vod__c</fullName>
        <description>Used to store the attendee&apos;s last name</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meal_Opt_In_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to indicate if an event attendee accepted a meal.</description>
        <label>Meal Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Event_vod__c</fullName>
        <description>The Medical Event that the Account, Contact, or User is attending.</description>
        <label>Medical Event</label>
        <referenceTo>Medical_Event_vod__c</referenceTo>
        <relationshipLabel>Event Attendees</relationshipLabel>
        <relationshipName>Event_Attendee_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Organization_vod__c</fullName>
        <description>Organization name of the attendee</description>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_vod__c</fullName>
        <description>Used to store the attendee&apos;s phone number.</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Position_vod__c</fullName>
        <description>Position event attendee held at the event</description>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Award_Winner_vod</fullName>
                </value>
                <value>
                    <fullName>Chair_Person_vod</fullName>
                </value>
                <value>
                    <fullName>Organizer_vod</fullName>
                </value>
                <value>
                    <fullName>Participant_vod</fullName>
                </value>
                <value>
                    <fullName>Speaker_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prescriber_vod__c</fullName>
        <description>Indicates if an attendee is a prescriber or not.</description>
        <label>Prescriber</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes_vod</fullName>
                </value>
                <value>
                    <fullName>No_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signature_Datetime_vod__c</fullName>
        <description>Stores the Datetime of when the Signature was captured</description>
        <label>Signature Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signature_vod__c</fullName>
        <description>Used to store the Signature</description>
        <label>Signature</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signee_vod__c</fullName>
        <description>When collecting a signature from a business account event attendee, the Signee free text field will appear on the signature screen if the user has FLS visibility to the field.</description>
        <label>Signee</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>Start Date for the Medical Event</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of the person invited to the medical event.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invited</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Signed_vod</fullName>
                </value>
                <value>
                    <fullName>Cleared_Signature_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Talk_Title_vod__c</fullName>
        <description>Title of the talk given at the event</description>
        <label>Talk Title</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User attending the event.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Event_Attendee_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Walk_In_Status_vod__c</fullName>
        <description>Used to track the status of walk-in attendees at an event.</description>
        <label>Walk-In Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs_Reconciliation_vod</fullName>
                </value>
                <value>
                    <fullName>Reconciled_To_Existing_Account_vod</fullName>
                </value>
                <value>
                    <fullName>Reconciled_To_Existing_User_vod</fullName>
                </value>
                <value>
                    <fullName>Reconciled_To_New_Account_vod</fullName>
                </value>
                <value>
                    <fullName>Dismissed_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_vod__c</fullName>
        <description>Used to store the attendee&apos;s zip code.</description>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Event Attendee</label>
    <nameField>
        <displayFormat>A{000000000}</displayFormat>
        <label>Attendee Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Attendees</pluralLabel>
    <recordTypes>
        <fullName>Event_Attendee_vod</fullName>
        <active>true</active>
        <description>Standard record type for Event Attendees</description>
        <label>Event_Attendee_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Attendee_Selection_vod</fullName>
        <active>true</active>
        <description>This rule validates that either an Account, Contact, or User was selected as an Attendee.</description>
        <errorConditionFormula>AND(LEN( Account_vod__c ) &lt; 1,LEN( Contact_vod__c ) &lt; 1,LEN( User_vod__c ) &lt; 1,LEN(EM_Attendee_vod__c) &lt; 1,LEN(EM_Event_Speaker_vod__c) &lt; 1, ISBLANK(TEXT(Walk_In_Status_vod__c)))</errorConditionFormula>
        <errorMessage>An Account, Contact, or User must be selected to save a record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Multiple_Attendees_vod</fullName>
        <active>true</active>
        <description>This validation Rule will confirm that only one Account or Contact or User is selected as the Attendee.</description>
        <errorConditionFormula>IF( LEN( Account_vod__c ) &gt; 0 , IF( OR(LEN( Contact_vod__c ) &gt; 0 ,LEN( User_vod__c ) &gt; 0),true,false) , IF( LEN( Contact_vod__c ) &gt; 0 , IF( OR(LEN( Account_vod__c ) &gt; 0 ,LEN( User_vod__c ) &gt; 0),true,false) , IF( LEN( User_vod__c ) &gt; 0 , IF( OR(LEN( Account_vod__c ) &gt; 0 ,LEN( Contact_vod__c ) &gt; 0),true,false) , false)))</errorConditionFormula>
        <errorMessage>Please select only one Account, Contact, or User.</errorMessage>
    </validationRules>
</CustomObject>